@@ -1,3 +1,7 @@
+2023-10-09  Karl Berry  <karl@freefriends.org>
+
+	* cpascal.h: typo.
+
 2023-09-24  Andreas Scherer  <https://ascherer.github.io>
 
 	* ctangleboot.cin,
